...
                    <view key="view" contentMode="scaleToFill" id="nAw-om-6zf">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="email@domain.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jbe-Aq-pRE">
                                <rect key="frame" x="48" y="168" width="318" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="text-field-account"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="rws-Z6-mYy"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <textInputTraits key="textInputTraits" textContentType="nickname"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="It's a secret" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zAf-CE-rOE">
                                <rect key="frame" x="48" y="270" width="318" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="text-field-password"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="4yQ-mr-Tdb"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your user below" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ouf-WR-AGP">
                                <rect key="frame" x="48" y="131" width="318" height="20"/>
                                <accessibility key="accessibilityConfiguration" identifier="enter-user-label"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="20" id="Yjm-CY-nKx"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
...
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZaA-DT-haE">
                                <rect key="frame" x="48" y="326" width="318" height="16"/>
                                <accessibility key="accessibilityConfiguration" identifier="label-message">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
...
                                <connections>
                                    <action selector="handleSaveButtonTapWithSender:" destination="CuX-gb-lJz" eventType="touchUpInside" id="qsW-d2-Nyh"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="INl-Oc-9qo">
                                <rect key="frame" x="323.5" y="362" width="42" height="60"/>
                                <accessibility key="accessibilityConfiguration" identifier="button-login"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="YZr-Pz-XX3"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                <state key="normal" title="Login"/>
                                <connections>
...
